Fix image cropping for multiple image sizes

--- a/styles/services/instagram.scss
+++ b/styles/services/instagram.scss
@@ -1,5 +1,8 @@
 .uppload-modal {
 	.primary-button.instagram {
-		background-color: #d62976;
+		background-color: #b53471;
+		&:hover {
+			background-color: #833471;
+		}
 	}
 }
