--- a/styles/services/preupload.scss
+++ b/styles/services/preupload.scss
@@ -9,6 +9,15 @@
 			padding: 1rem;
 			display: flex;
 			justify-content: center;
+			flex-direction: column;
+			overflow: auto;
+			> div > img {
+				margin: auto;
+			}
+			.croppr-container {
+				text-align: center;
+				margin: auto;
+			}
 		}
 		.bottom-buttons {
 			text-align: center;
@@ -31,7 +40,7 @@
 	}
 	#previewImage {
 		display: none;
-		width: 100%;
+		max-height: 500px;
 	}
 }
 
